Do the first part of the top bar

--- a/index.html
+++ b/index.html
@@ -56,21 +56,29 @@
         </div>
         
         <div class="top_bar">
-            <div class="top_top_bar">
-                <!-- <button>
-                    <img src="./images/search.png" alt="Search button" class="search_button">
-                </button>
-                <input type="text" class="search_bar">
-                <button>
-                    <img src="./images/bell.png" alt="notifications_button">
-                </button>
-                <a href="">
-                    <img src="" alt="Top Profile Button">
-                    <span class="top_profile_name_link"></span>
-                </a> -->
+            <div class="top_bar_top">
+
+                <div class="search_field">
+                    <button>
+                        <img src="./images/search.png" alt="Search button" class="search_button">
+                    </button>
+                    <div class="input_container">
+                        <input type="text" class="search_bar">
+                    </div>
+                </div>
+                
+                <div class="profile_field">
+                    <button>
+                        <img src="./images/bell.png" alt="notifications_button">
+                    </button>
+                    <a href="">
+                        <img src="./images/profile_avatar.png" alt="Top Profile Button" class="top_profile_button">
+                        <span class="top_profile_name_link">My Profile</span>
+                    </a>
+                </div>
             </div>
 
-            <div class="bottom_top_bar"></div>
+            <div class="top_bar_bottom"></div>
         </div>
 
         <div class="main_container">Main Container</div>
