Make the bottom part of the top bar

--- a/index.html
+++ b/index.html
@@ -78,10 +78,59 @@
                 </div>
             </div>
 
-            <div class="top_bar_bottom"></div>
+            <div class="top_bar_bottom">
+                <span class="profile_info_container">
+                    <img src="./images/profile_avatar.png" alt="main_profile_image" class="main_profile_image">
+                    <span class="profile_message_and_name_container">
+                        <div class="hello_message">Hi there,</div>
+                        <div class="profile_name">Pedro Augusto (<a href="https://github.com/PedroDanadao" target="_blank">PedroDanadao</a>)</div>
+                    </span>
+                </span>
+
+                <span class="profile_buttons_container">
+                    <button class="new_button">New</button>
+                    <button class="upload_button">Upload</button>
+                    <button class="share_button">Share</button>
+                </span>
+            </div>
         </div>
 
-        <div class="main_container">Main Container</div>
+        <div class="main_container">
+            <div class="projects_container">
+                <div class="projects_div">
+                    Your Projects
+                </div>
+                <div class="projects_tabs_container">
+                    <div class="projects_tab"></div>
+                    <div class="projects_tab"></div>
+                    <div class="projects_tab"></div>
+                    <div class="projects_tab"></div>
+                    <div class="projects_tab"></div>
+                    <div class="projects_tab"></div>
+                </div>
+            </div>
+
+            <div class="announcements_and_trending_container">
+                <div class="announcements_div">
+                    Announcements
+                </div>
+                <div class="announcements_tabs_container">
+                    <div class="announcements_tab"></div>
+                    <div class="announcements_tab"></div>
+                    <div class="announcements_tab"></div>
+                </div>
+
+                <div class="trending_div">
+                    Trending
+                </div>
+                <div class="trending_tabs_container">
+                    <div class="trending_tab"></div>
+                    <div class="trending_tab"></div>
+                    <div class="trending_tab"></div>
+                    <div class="trending_tab"></div>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- add this later for the icons -->
     <!-- 
