Work a bit more on the main area

--- a/index.html
+++ b/index.html
@@ -98,30 +98,115 @@
         <div class="main_container">
             <div class="projects_container">
                 <div class="projects_div">
-                    Your Projects
+                    <div>
+                        <b>Your Projects</b>
+                    </div>
                 </div>
                 <div class="projects_tabs_container">
-                    <div class="projects_tab"></div>
-                    <div class="projects_tab"></div>
-                    <div class="projects_tab"></div>
-                    <div class="projects_tab"></div>
-                    <div class="projects_tab"></div>
-                    <div class="projects_tab"></div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis quas architecto perspiciatis..</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">My Project Description</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">My Project Description</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">My Project Description</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">My Project Description</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
+                    <div class="projects_tab">
+                        <div class="project_tab_texts">
+                            <div class="project_title">Project Title</div>
+                            <p class="project_description">My Project Description</p>
+                        </div>
+                        <div class="project_tab_buttons">
+                            <img src="./images/profile.png" alt="" class="favorite_image">
+                            <img src="./images/search.png" alt="" class="watch_image">
+                            <img src="./images/communities.png" alt="" class="share_image">
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="announcements_and_trending_container">
                 <div class="announcements_div">
-                    Announcements
+                    <b>Announcements</b>
                 </div>
                 <div class="announcements_tabs_container">
-                    <div class="announcements_tab"></div>
-                    <div class="announcements_tab"></div>
-                    <div class="announcements_tab"></div>
+                    <div class="announcements_tab">
+                        <div class="announcement_title">
+                            Announcement
+                        </div>
+                        <div class="announcement_text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announcements_tab">
+                        <div class="announcement_title">
+                            Announcement
+                        </div>
+                        <div class="announcement_text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
+                        </div>
+                    </div>
+                    <div class="divider"></div>
+                    <div class="announcements_tab last_announcement">
+                        <div class="announcement_title">
+                            Announcement
+                        </div>
+                        <div class="announcement_text">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
+                        </div>
+                    </div>
                 </div>
 
                 <div class="trending_div">
-                    Trending
+                    <b>Trending</b>
                 </div>
                 <div class="trending_tabs_container">
                     <div class="trending_tab"></div>
