Finish the page
This was a nice project. I practiced more about grid layouts and even
revisited some previous projects to fill the page with content.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                 <div class="projects_tabs_container">
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nobis quas architecto perspiciatis..</p>
+                            <a href="https://pedrodanadao.github.io/odin-recipes/" target="_blank">
+                                <div class="project_title">Odin Recipes</div>
+                                <p class="project_description">Simple page with three other pages that contain recipes. My first project from The Odin Project.</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -116,8 +118,10 @@
                     </div>
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">My Project Description</p>
+                            <a href="https://pedrodanadao.github.io/rock_paper_scisors/" target="_blank">
+                                <div class="project_title">Rock Paper Scissors</div>
+                                <p class="project_description">Page to play rock paper scissors with a command prompt style logging to check each play.</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -127,8 +131,10 @@
                     </div>
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">My Project Description</p>
+                            <a href="https://pedrodanadao.github.io/etch-a-sketch/" target="_blank">
+                                <div class="project_title">Etch a Sketch</div>
+                                <p class="project_description">Page that contains squares and each square changes color when the user hovers the mouse over it.</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -138,8 +144,10 @@
                     </div>
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">My Project Description</p>
+                            <a href="https://pedrodanadao.github.io/Calculator/" target="_blank">
+                                <div class="project_title">Calculator</div>
+                                <p class="project_description">Simple calculator page</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -149,8 +157,10 @@
                     </div>
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">My Project Description</p>
+                            <a href="https://pedrodanadao.github.io/landing-page/" target="_blank">
+                                <div class="project_title">Landing Page</div>
+                                <p class="project_description">Simple Landing Page without working links or buttons. The last project in the foundations course of The Odin Project.</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -160,8 +170,10 @@
                     </div>
                     <div class="projects_tab">
                         <div class="project_tab_texts">
-                            <div class="project_title">Project Title</div>
-                            <p class="project_description">My Project Description</p>
+                            <a href="https://pedrodanadao.github.io/Sign-up-Form/" target="_blank">
+                                <div class="project_title">Sing Up Form</div>
+                                <p class="project_description">Project to practice the forms designs.</p>
+                            </a>
                         </div>
                         <div class="project_tab_buttons">
                             <img src="./images/star.png" alt="" class="favorite_image">
@@ -181,7 +193,7 @@
                 <div class="announcements_tabs_container">
                     <div class="announcements_tab">
                         <div class="announcement_title">
-                            Announcement
+                            Site Maintenance
                         </div>
                         <div class="announcement_text">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
@@ -192,7 +204,7 @@
                     
                     <div class="announcements_tab">
                         <div class="announcement_title">
-                            Announcement
+                            Community Share Day
                         </div>
                         <div class="announcement_text">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
@@ -203,7 +215,7 @@
                     
                     <div class="announcements_tab last_announcement">
                         <div class="announcement_title">
-                            Announcement
+                            Updated Privacy Policy
                         </div>
                         <div class="announcement_text">
                             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate ut modi facilis nobis sint minima vitae rerum, corporis
@@ -221,10 +233,10 @@
                         <img src="./images/linkedin_profile.png" alt="Avatar Image" class="avatar_image">
                         <div class="trending_text">
                             <div class="avatar_nick">
-                                @profile_name
+                                @Random_Guy
                             </div>
                             <div class="avatar_project_name">
-                                Avatar Project Name
+                                Project Name
                             </div>
                         </div>
                     </div>
@@ -232,10 +244,10 @@
                         <img src="./images/profile_avatar.png" alt="Avatar Image" class="avatar_image">
                         <div class="trending_text">
                             <div class="avatar_nick">
-                                @profile_name
+                                @PedroDanadao
                             </div>
                             <div class="avatar_project_name">
-                                Avatar Project Name
+                                Sign Up Form
                             </div>
                         </div>
                     </div>
@@ -243,10 +255,10 @@
                         <img src="./images/profile_drawn.png" alt="Avatar Image" class="avatar_image">
                         <div class="trending_text">
                             <div class="avatar_nick">
-                                @profile_name
+                                @RandomGirl
                             </div>
                             <div class="avatar_project_name">
-                                Avatar Project Name
+                                Project Name
                             </div>
                         </div>
                     </div>
@@ -254,10 +266,10 @@
                         <img src="./images/profile_cat.png" alt="Avatar Image" class="avatar_image">
                         <div class="trending_text">
                             <div class="avatar_nick">
-                                @profile_name
+                                @random_cat
                             </div>
                             <div class="avatar_project_name">
-                                Avatar Project Name
+                                Project Name
                             </div>
                         </div>
                     </div>
